# WriterAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railway-token  AGENT_03_ALL_TASKS_COMPLETE.md  AGENT_03_ALL_TASKS_FINAL_COMPLETE.md  AGENT_03_COMPLETE_SUCCESS.md  AGENT_03_FINAL_STATUS.md  AGENT_03_PROGRESS_REPORT.md  AGENT_03_REMAINING_WORK.md  AGENT_06_INTEGRATION_GUIDE.md  AGENT_07_COMPLETION_REPORT.md  AGENT_ARCHITECTURE_V5_ROADMAP.md  AGENT_QUICK_REFERENCE.md  AGENT_STATUS_REVIEW.md  ALIGNMENT_CHECKLIST.md  ALL_DONE.md  ALL_QUALITY_IMPROVEMENTS_SUMMARY.txt  ANBG_IMPLEMENTATION_PROGRESS.md  ANBG_TESTING_GUIDE.md  ANBG_TRANSFORMATION_SUMMARY.md  ANBG_USAGE_GUIDE.md  ARCHITECTURE_AUDIT_REPORT.md  AUDIT_INDEX.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_PROJECT_OVERVIEW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DETAILED_AGENT_IMPLEMENTATION_PLANS.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_AUDIT.md  EXPORT_FEATURE_SUMMARY.md  EXPORT_README.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SYSTEM_STATUS.txt  FULL_GENERATION_STARTED.md  (+101 more)
prometheus_novel/: Modelfile.qwen3-nothink  __init__.py  api.py  pyproject.toml  run_prometheus.py
prometheus_novel/audiobook/: __init__.py  audio_post.py  engine.py  ssml.py  tts_client.py
prometheus_novel/bookops/: __init__.py  engine.py
prometheus_novel/configs/: cleanup_patterns.yaml  cliche_clusters.yaml  config_resolver.py  env_config.py  hot_phrases.auto.yaml  hot_phrases_metaphor.yaml  hybrid_paid_config.yaml  phrase_miner.yaml  phrase_replacement_banks.yaml  quality_policy.yaml  romance_config_template.yaml  schema_validator.py  sensory_motifs.yaml  surgical_replacements.yaml  the_empathy_clause.yaml
prometheus_novel/continuity/: facts_ledger.py
prometheus_novel/covergen/: __init__.py  art_director.py  compositor.py  engine.py  image_gen.py  pdf_export.py  presets.py  upscaler.py
prometheus_novel/docs/: AUDIOBOOK_GUIDE.md  CONCEPT_GENERATION.md  COVERGEN_GUIDE.md  CURSOR_TASKS.md  DEFENSE_ARCHITECTURE.md  DEVELOPMENTAL_AUDIT.md  EDITORIAL_CRAFT_GAPS.md  ENGINE_FREEZE_CHECKLIST.md  MODEL_STRATEGY_BUDGET.md  MODEL_SWAP_GUIDE.md  PIPELINE_AUDIT_GUIDE.md  POLISH_CONSOLIDATION_PLAN.md  QUALITY_RUNBOOK.md  QUALITY_SYSTEM_OVERVIEW.md  README.md  RELIABILITY_RUNBOOK.md  REVISION_CHECKLIST.md  REVISION_PRIORITIES.md  ROADMAP_V2.md  ROMANCE_ADAPTATION_GUIDE.md  ROMANCE_PREP_GUIDE.md  WRITING_RULES_GAP_ANALYSIS.md
prometheus_novel/editor_studio/: __init__.py  orchestrator.py  passes.py
(+312 files in other folders)
